2014-4-18 <JDT>
   Tweaks to NEWS and README.  Preparing for 2.0.0-rc1 release.
2014-4-16 <JDT>
   Decided that enough has changed that this should be v2.0
   Added Id tags
2014-4-14 <JDT>
   Added get_partition_list to MeasureFunction
   Removed do_cluster from MeasureFunction (no longer needed)
   Fixed bug with NjettinessPlugin where jets were listed in backwards order from axes.
   Removed various commented out pieces of code.
2014-3-16 <JDT>
   Added partitioning information to Nsubjettiness
   Partitioning is now calculated in MeasureFunction and stored by Njettiness.
   Rewrote MeasureFunction result() to call result_from_partition()
   Added subjet (and constituent counting) information to example_basic_usage
   Commented out redundant "getJets" function
2014-2-25 <JDT>
   Added access to seedAxes used for one-pass minimization routines.
   Added axes print out to example_basic_usage, and fixed too many PrintJets declarations
2014-2-24 <JDT>
   Fixed embarrassing bug with min_axes (error introduced after v1.0 to make it the same as onepass_kt)
   Simplified GeometricMeasure and added possibility of beta dependence
   Commented out WTA2 options, since those have not been fully tested (nor do they seem particularly useful at the moment).  They can be reinstated if the physics case can be made to use them.
   Split example into example_basic_usage and example_advanced_usage
2014-1-28 <TJ>
   Added new options in WinnerTakeAllRecombiner to use either pT or pT^2/E to recombine particles
2014-1-24 <JDT>
   Added access to currentAxes from Nsubjettiness.
2014-1-18 <JDT>
   Added beam regions to MeasureFunction, correspondingly renamed functions to have jet and beam regions
   Renamed functions in TauComponents for consistency with MeasureFunction
   Adding debugging code to AxesFinderFromOnePassMinimization::getAxes
   Worked extensively on example.cc to make sure that it tests all available options.